@@ -20,6 +20,7 @@
   * reporting index register as ymm when it is actually xmm
 * extended support for some newer instructions (pconfig, movdir64b) from just
   64-bit to all decode modes
+* fix cvttsd2si/cvtsd2si reporting xmm registers as destinations in 64-bit mode
 
 ## 1.1.5
 * fix several typos across crate docs - thank you Bruce! (aka github user waywardmonkeys)
